[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dash-relay"
version = "1.0.0"
description = "Client-side event bridge for Dash with a per-action handler registry."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Dash Relay contributors" }
]
dependencies = [
  "dash>=2.16",
]
keywords = ["dash", "plotly", "ui", "event-bridge", "handler-registry", "dynamic-layout"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dash_relay = ["assets/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
