[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dash-relay"
version = "1.1.2"
description = "Client-side event bridge for Dash with a per-action handler registry."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Dash Relay contributors" }
]
dependencies = [
  "dash>=2.16",
]
keywords = ["dash", "plotly", "ui", "event-bridge", "handler-registry", "dynamic-layout"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Dash",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/rekeshali/dash-relay"
Repository = "https://github.com/rekeshali/dash-relay"
Issues = "https://github.com/rekeshali/dash-relay/issues"
Changelog = "https://github.com/rekeshali/dash-relay/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
# Integration tests: real-browser verification of event-type coverage.
# Run: pip install -e .[integration] && playwright install chromium
#      pytest tests/test_event_types.py
integration = [
  "pytest>=8.0",
  "playwright>=1.40",
  "requests>=2.28",
]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dash_relay = ["assets/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
